# jfk-airport-sim

./: README.md  pyproject.toml
custom-skills/: MANIFEST.md  SKILL.md  airline-crew-analytics-expert.skill  airport-ground-ops-expert.skill  airport-layout-and-airspace.md  anylogic-expert.skill  atl-operations-expert.skill  crew-analytics.md  delta-hub-and-analytics.md  delta-pwa-pilot-rules.md  experiments.md  flight-attendant-rules.md  metrics-and-analytics.md  model-structure.md  output-analysis.md  paradigms.md  simulation-expert.skill  standalone-java.md  tfm-toolbox.md  turn-and-ramp.md  us-atm-government-expert.skill  verification-validation.md
data/: jfk_config.json
data/airport/: jfk_config.json
data/ground_programs/: 2024-07-16_jfk.json  2024-08-01_jfk.json
data/real_days/: 2024-06-03_jfk.csv  2024-06-17_jfk.csv  2024-07-01_jfk.csv  2024-07-16_jfk.csv  2024-08-01_jfk.csv  2024-08-16_jfk.csv  manifest.json
data/validation/: sample_june1_2025.csv
docs/: future-improvements.md
scripts/: enrich_terminals.py  fetch_bts_data.py  validate_real_day.py
src/jfk_sim/: __init__.py  config.py  metrics.py  resources.py  schedule.py  simulation.py
tests/: test_sim.py
