[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "jfk-airport-sim"
version = "0.1.0"
description = "Discrete-event simulation of JFK airport taxi and runway operations"
requires-python = ">=3.11"
dependencies = [
    "simpy>=4.0",
    "numpy>=1.26",
    "pandas>=2.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
